# moveit_pro_ur_config

./: .gitignore  .gitmodules  Dockerfile  README.md  SolidPrimitive  colcon-defaults.yaml  docker-compose.yaml
src/compute_place_orientation/: CMakeLists.txt  compute_place_orientation_plugin_description.xml  package.xml
src/compute_place_orientation/include/compute_place_orientation/: compute_place_orientation.hpp
src/compute_place_orientation/src/: compute_place_orientation.cpp  register_behaviors.cpp
src/filter_graspable_objects/: CMakeLists.txt  behavior_plugin.yaml  filter_graspable_objects_plugin_description.xml  package.xml
src/filter_graspable_objects/include/filter_graspable_objects/: filter_graspable_objects.hpp
src/filter_graspable_objects/src/: filter_graspable_objects.cpp  register_behaviors.cpp
src/filter_graspable_objects/test/: test_behavior_plugins.cpp
src/generate_shape_urdf/: CMakeLists.txt  behavior_plugin.yaml  generate_shape_urdf_plugin_description.xml  package.xml
src/generate_shape_urdf/include/generate_shape_urdf/: generate_shape_urdf.hpp
src/generate_shape_urdf/src/: generate_shape_urdf.cpp  register_behaviors.cpp
src/generate_shape_urdf/test/: test_behavior_plugins.cpp
src/get_graspable_grocery_objects_from_masks3d/: CMakeLists.txt  get_graspable_grocery_objects_from_masks3d_plugin_description.xml  package.xml
src/get_graspable_grocery_objects_from_masks3d/include/get_graspable_grocery_objects_from_masks3d/: compute_grocery_place_height.hpp  get_graspable_grocery_objects_from_masks3d.hpp  shape_fitting.hpp
src/get_graspable_grocery_objects_from_masks3d/src/: compute_grocery_place_height.cpp  get_graspable_grocery_objects_from_masks3d.cpp  register_behaviors.cpp  shape_fitting.cpp
src/picknik_009_ur5e_behaviors/: CMakeLists.txt  behavior_plugin.yaml  package.xml  picknik_009_ur5e_behaviors_plugin_description.xml
src/picknik_009_ur5e_behaviors/include/picknik_009_ur5e_behaviors/: create_solid_primitive_from_shape.hpp  generate_surface_poses_from_solid_primitive.hpp  read_yaml_list.hpp  read_yaml_value.hpp
src/picknik_009_ur5e_behaviors/src/: create_solid_primitive_from_shape.cpp  generate_surface_poses_from_solid_primitive.cpp  read_yaml_list.cpp  read_yaml_value.cpp  register_behaviors.cpp
src/picknik_009_ur5e_config/: CMakeLists.txt  package.xml
src/picknik_009_ur5e_config/calibration/: scene_camera_calibration.yaml
src/picknik_009_ur5e_config/config/: config.yaml  placement_zones.yaml
src/picknik_009_ur5e_config/config/control/: picknik_ur.ros2_control.yaml
src/picknik_009_ur5e_config/config/moveit/: picknik_009_ur5e.srdf
src/picknik_009_ur5e_config/description/: bin_tote.urdf  calibration_pole.urdf  calibration_table.urdf  chunky_shelf.stl  chunky_shelf.urdf  environment.xacro  environment_shelving_test.xacro  grocery_item_collision.urdf  picknik_009_ur5e.urdf.xacro  picknik_009_ur5e_mujoco.urdf.xacro  scene_camera.urdf  shelf.stl  shelf.urdf  shelf.urdf.xacro  shelf_only.urdf  table.dae  ur_stand.stl
src/picknik_009_ur5e_config/description/mujoco/: scene.xml  ur5e_epick.xml  ur5e_epick_globals.xml
src/picknik_009_ur5e_config/launch/: agent_bridge.launch.xml  cameras.launch.xml  pro_rs_launch.py  robot_drivers_to_persist.launch.py  zed_cameras.launch.xml
src/picknik_009_ur5e_config/models/: sam3_decoder.onnx  sam3_geometry_encoder.onnx  sam3_text_encoder.onnx  sam3_vision_encoder.onnx
src/picknik_009_ur5e_config/objectives/: activate_vacuum.xml  calibrate_bin.xml  calibrate_detected_april_tags.xml  calibrate_qualcomm_setup.xml  calibrate_qualcomm_shelves_segmentation.xml  calibrate_scene_camera.xml  calibrate_touch_april_tags.xml  capture_bin_snapshot.xml  capture_wrist_snapshot.xml  cartesian_place_grocery_item.xml  close_gripper.xml  deactivate_vacuum.xml  debug_vacuum_cycle.xml  detect_april_tag_here.xml  detect_grocery_objects.xml  force_relaxation.xml  get_wrist_camera_point_cloud.xml  i_want_candy.xml  jjh.xml  load_bracket_part_pointcloud_subtree.xml  load_calibrated_scene.xml  load_can_in_planning_scene.xml  load_rack_in_planning_scene.xml  look_at_table.xml  look_for_bracket_part_subtree.xml  looping_pick_and_place_object_sam.xml  ml_find_objects_on_table.xml  move_until_vacuum_state.xml  move_until_vacuum_state_or_collision.xml  open_gripper.xml  pick_and_place_brackets.xml  pick_and_place_demo.xml  pick_and_place_grocery_item.xml  pick_pringles_scene_camera.xml  place_grocery_item.xml  place_grocery_item_two_stage.xml  pringles_segment_demo.xml  qualcomm_april_tag_calibration.xml  qualcomm_pick.xml  qualcomm_pick_pringles_v1.xml  (+17 more)
src/picknik_009_ur5e_config/objectives/calibration/: bin_bottom_left.yaml  bin_bottom_right.yaml  bin_calibrated_pose.yaml  bin_opening_center_calibrated_pose.yaml  bin_opening_center_pose.yaml  bottom_left_tag.yaml  bottom_right_tag.yaml  bottom_shelf_calibrated_pose.yaml  bottom_shelf_pose.yaml  camera_calibrated_pose.yaml  place_target_pose.yaml  pole_calibrated_pose.yaml  saved_ee_pose.yaml  scene_camera_link_pose.yaml  shelf_back_calibrated_pose.yaml  shelf_back_pose.yaml  shelf_base_calibrated_pose.yaml  shelf_base_pose.yaml  shelf_calibrated_pose.yaml  shelf_pose.yaml  table_calibrated_pose.yaml  top_left_tag.yaml  top_right_tag.yaml  top_shelf_calibrated_pose.yaml  top_shelf_pose.yaml
src/picknik_009_ur5e_config_sim/: CMakeLists.txt  package.xml
src/picknik_009_ur5e_config_sim/config/: config.yaml
src/picknik_009_ur5e_config_sim/config/control/: picknik_ur.ros2_control.yaml
src/picknik_009_ur5e_config_sim/mjcf/: scene.xml
src/picknik_009_ur5e_config_sim/mjcf/assets/: additions.xml  epick_body.stl  extra_objects.xml  robot_description.urdf  (+5 more)
src/picknik_009_ur5e_config_sim/urdf/: sim_rack.urdf  tomato_soup_can.urdf  ur_mujoco_ros2_control.xacro
src/ur_behaviors/: CMakeLists.txt  behavior_plugin.yaml  package.xml
src/ur_behaviors/behaviors/: CMakeLists.txt  ur_behaviors_plugin_description.xml
src/ur_sim/: CMakeLists.txt  package.xml
src/ur_sim/config/: config.yaml
src/ur_sim/description/: picknik_ur.xacro  robot.xml  scene.xml  ur7e.xml
(+132 files in other folders)
