<?xml version="1.0" ?>
<package format="3">
  <name>compute_place_orientation</name>
  <version>0.0.1</version>
  <description>
    Computes the grasp_link orientation for placing an object upright at a target location.
  </description>
  <maintainer email="support@picknik.ai">MoveIt Pro Maintainer</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>moveit_pro_package</build_depend>

  <depend>geometry_msgs</depend>
  <depend>moveit_pro_behavior_interface</depend>
  <depend>pluginlib</depend>
  <depend>tf2_eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
