<?xml version="1.0" encoding="utf-8" ?>
<package format="3">
  <name>generate_shape_urdf</name>
  <version>0.0.0</version>
  <description>Behavior plugin that generates a URDF string for primitive shapes (box, sphere, cylinder).</description>

  <maintainer email="support@picknik.ai">
    MoveIt Pro User
  </maintainer>
  <author email="support@picknik.ai">
    MoveIt Pro User
  </author>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>moveit_pro_package</build_depend>

  <depend>geometry_msgs</depend>
  <depend>moveit_pro_behavior_interface</depend>
  <depend>tf2_eigen</depend>
  <depend>fmt</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <buildtool_depend>python3-colcon-common-extensions</buildtool_depend>
</package>
