<?xml version="1.0" encoding="utf-8" ?>
<package format="3">
  <name>get_graspable_grocery_objects_from_masks3d</name>
  <version>0.0.0</version>
  <description>
    Fits best primitive shape (box, cylinder, or sphere) to point cloud segments
    from 3D masks.
  </description>

  <maintainer email="support@picknik.ai">MoveIt Pro User</maintainer>
  <author email="support@picknik.ai">MoveIt Pro User</author>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>moveit_pro_package</build_depend>

  <depend>moveit_pro_behavior_interface</depend>
  <depend>moveit_studio_vision_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <buildtool_depend>python3-colcon-common-extensions</buildtool_depend>
</package>
