<?xml version="1.0" ?>
<package format="3">
  <name>picknik_009_ur5e_config_sim</name>
  <version>0.8.0</version>

  <description>
    Simulation config for Dev-009 UR-5e + EPick gripper (fake hardware)
  </description>

  <maintainer email="henningkayser@picknik.ai">Henning Kayser</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>picknik_accessories</exec_depend>

  <depend>picknik_009_ur5e_config</depend>
  <depend>ur_hw</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_clang_format</test_depend>
  <test_depend>ament_clang_tidy</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
