<?xml version="1.0" encoding="utf-8" ?>
<package format="3">
  <name>ur_behaviors</name>
  <version>0.0.0</version>
  <description>Custom behaviors for the UR robot configuration.</description>

  <maintainer email="support@picknik.ai">MoveIt Pro Maintainer</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>moveit_pro_package</build_depend>

  <depend>moveit_pro_behavior_interface</depend>
  <depend>pluginlib</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
